--- a/apps/mint-ui/index.html
+++ b/apps/mint-ui/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="wintry">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mint - MapleStory Auction House</title>
+  <title>Mint</title>
 </head>
 
 <body>
